[package]
name = "shell-texturing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.2", features = ["approx", "fast-math"] }
glium = "0.33.0"
nanorand = { version = "0.7.0", features = [
    "getrandom",
    "tls",
], default-features = false }
rodio = { version = "0.17.3", default-features = false, features = ["vorbis"] }
winit = "0.28.7"
raw-window-handle = "0.5.2"
glutin-winit = "0.3.0"
